--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html>
 <head>
 	<title>new get up</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 <div class="wraper">
-	<div class="header"></div>
+	<div class="header">
+		<div class="m-header">
+		<div class="logo">
+			<div class="logo-im">
+				<img src="img/logo-tv-logo.png">
+			</div>
+			</div>
+			<div class="search">
+				<input type="search" name="search" placeholder="search">
+				<div class="search-icon">
+				<i class="fa fa-search" aria-hidden="true"></i>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 </body>
