editing some div

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <div class="wraper">
 	<div class="header">
 		<div class="m-header">
+		<div class="logo-img">
 		<div class="logo">
-			<div class="logo-im">
 				<img src="img/logo-tv-logo.png">
 			</div>
 			</div>
@@ -20,7 +20,70 @@
 				<i class="fa fa-search" aria-hidden="true"></i>
 				</div>
 			</div>
+			<div class="shoping-cart">
+				<div class="shoping-icon">
+					<a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+				</div>
+				<div class="cart-text">
+					0
+				</div>
+				<div class="cart-text2">
+					<p>Shoping cart<br>0.005</p>
+				</div>
+			</div>
 		</div>
+	</div>
+	<div class="catagory-menu">
+		<div class="catagory-menu-m">
+			<div class="catagory">
+				<div class="catagory-text">
+					<h5>Catagory</h5>
+				</div>
+				<div class="catagory-icon">
+					<i class="fa fa-bars" aria-hidden="true"></i>
+				</div>
+			</div>
+			<div class="menu">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Aboute</a></li>
+					<li><a href="#">Prodact</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</div><div class="hero">
+		<div class="hero-m">
+			<div class="hero-img">
+				<img src="img/01_HOME.jpg">
+			</div>
+			<div class="hero-text">
+				<h1>Get Up 80%</h1>
+				<p>The History By Decade section is for those supporters who 
+	                                   prefer stories to statistics. It tells the story of United’s development from 
+	                                 a local works football It tells the story of United’s development from </p>
+			</div>
+			<div class="battun">
+				<a href="#">RADE MORE</a>
+			</div>
+		</div>
+	</div>
+	<div class="offer">
+	<div class="offer-m">
+	<div class="offer-all">
+		<div class="offer-img1">
+			<img src="img/01_HOME-Recovered.jpg">
+		</div>
+		<div class="offer-img2">
+			<img src="img/watch2.png">
+		</div>
+		<div class="offer-text">
+			<h5>Digital Watch</h5>
+			<p>Gear Smart Watch</p>
+		</div>
+         </div>
+         
+	</div>
 	</div>
 </div>
 
