editing some css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>new get up</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Vibur" rel="stylesheet">
 </head>
 <body>
 <div class="wraper">
@@ -70,11 +71,7 @@
 	</div>
 	<div class="offer">
 	<div class="offer-m">
-	<div class="offer-all">
 		<div class="offer-img1">
-			<img src="img/01_HOME-Recovered.jpg">
-		</div>
-		<div class="offer-img2">
 			<img src="img/watch2.png">
 		</div>
 		<div class="offer-text">
@@ -82,8 +79,154 @@
 			<p>Gear Smart Watch</p>
 		</div>
          </div>
-         
+         <div class="offer-m">
+		<div class="offer-img1">
+			<img src="img/watch2.png">
+		</div>
+		<div class="offer-text">
+			<h5>Digital Watch</h5>
+			<p>Gear Smart Watch</p>
+		</div>
+         </div>
+
 	</div>
+	<div class="popular-prodact">
+		<div class="popular-prodact-m">
+		<h3>Popular Prodact</h3>
+			<div class="popular-img">
+				<img src="img/gear_watch.png">
+				<h5>Gear smart watch</h5>
+				<p>18.00$</p>
+				<div class="p-icon">
+					<a href=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-gratipay" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-recycle" aria-hidden="true"></i></a>
+				</div>
+			</div>
+			<div class="popular-img">
+				<img src="img/hire_dryer.png">
+				<h5>Gear smart watch</h5>
+				<p>18.00$</p>
+				<div class="p-icon">
+					<a href=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-gratipay" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-recycle" aria-hidden="true"></i></a>
+				</div>
+			</div>
+			<div class="popular-img">
+				<img src="img/laptop.png">
+				<h5>Gear smart watch</h5>
+				<p>18.00$</p>
+				<div class="p-icon">
+					<a href=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-gratipay" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-recycle" aria-hidden="true"></i></a>
+				</div>
+			</div>
+			<div class="popular-img">
+				<img src="img/tab.png">
+				<h5>Gear smart watch</h5>
+				<p>18.00$</p>
+				<div class="p-icon">
+					<a href=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-gratipay" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-recycle" aria-hidden="true"></i></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="contain">
+		<div class="contain-m">
+		<div class="contain1">
+		<div class="fa-icon">
+		<i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>
+		</div>
+			<h5>Best Velue Prodact</h5>
+			<p>Top Quality Brand</p>
+			</div>
+			<div class="contain1">
+		<div class="fa-icon">
+	         <i class="fa fa-car" aria-hidden="true"></i>
+		</div>
+			<h5>Free Delivery</h5>
+			<p>Top Quality Brand</p>
+			</div>
+			<div class="contain1">
+		<div class="fa-icon">
+		<i class="fa fa-shield" aria-hidden="true"></i>
+		</div>
+			<h5>Secure Shiping</h5>
+			<p>Top Quality Brand</p>
+			</div>
+			<div class="contain1">
+		<div class="fa-icon">
+		<i class="fa fa-life-ring" aria-hidden="true"></i>
+		</div>
+			<h5>Dadicated Sapport</h5>
+			<p>Top Quality Brand</p>
+			</div>
+		</div>
+	</div>
+	<div class="popular-prodact">
+		<div class="popular-prodact-m">
+		<h3>Recent Prodacts</h3>
+			<div class="popular-img">
+				<img src="img/gear_watch.png">
+				<h5>Gear smart watch</h5>
+				<p>18.00$</p>
+				<div class="p-icon">
+					<a href=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-gratipay" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-recycle" aria-hidden="true"></i></a>
+				</div>
+				<div class="sale">
+					<p>Sale</p>
+				</div>
+			</div>
+			<div class="popular-img">
+				<img src="img/hire_dryer.png">
+				<h5>Gear smart watch</h5>
+				<p>18.00$</p>
+				<div class="p-icon">
+					<a href=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-gratipay" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-recycle" aria-hidden="true"></i></a>
+				</div>
+				<div class="sale">
+					<p>Sale</p>
+				</div>
+			</div>
+			<div class="popular-img">
+				<img src="img/laptop.png">
+				<h5>Gear smart watch</h5>
+				<p>18.00$</p>
+				<div class="p-icon">
+					<a href=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-gratipay" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-recycle" aria-hidden="true"></i></a>
+				</div>
+			</div>
+			<div class="popular-img">
+				<img src="img/tab.png">
+				<h5>Gear smart watch</h5>
+				<p>18.00$</p>
+				<div class="p-icon">
+					<a href=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-gratipay" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-recycle" aria-hidden="true"></i></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="backgaround">
+		<div class="backgaround-m">
+	         	<a href="#"><img src="img/01home_icon1.png"></a>
+	         	<a href="#"><img src="img/01home_icon2.png"></a>
+	         	<a href="#"><img src="img/01home_icon3.png"></a>
+	         	<a href="#"><img src="img/01home_icon4.png"></a>
+	         	<a href="#"><img src="img/01home_icon5.png"></a>
+	         	<a href="#"><img src="img/01home_icon6.png"></a>
+		</div>
 	</div>
 </div>
 
