editing some div

--- a/index.html
+++ b/index.html
@@ -228,6 +228,109 @@
 	         	<a href="#"><img src="img/01home_icon6.png"></a>
 		</div>
 	</div>
+	<div class="star">
+		<div class="star-m">
+			<div class="best-selling">
+			<h4>Best Selling</h4>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+			</div>
+			<div class="best-selling">
+			<h4>Feutured</h4>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+			</div>
+			<div class="best-selling">
+			<h4>Top Rated</h4>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+				<div class="star-img">
+					<div class="w-img">
+						<img src="img/01_HOME_watch.png">
+					</div>
+					<div class="s-text">
+						<h5>Gear smart wach</h5>
+						<img src="img/01_HOME_5star.png">
+						<p>$10.00</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 </body>
