editing subscribe div

--- a/index.html
+++ b/index.html
@@ -331,6 +331,19 @@
 			</div>
 		</div>
 	</div>
+	<div class="subscribe">
+		<div class="subscribe-m">
+			<div class="sub-text">
+				<p>Subscrib Here To Know Our Updats</p>
+			</div>
+			<div class="sub-bar">
+				<input type="subscrib" name="subscrib" placeholder="Your email here">
+			</div>
+			<div class="sub-box">
+				<a href="#"><p>SUBCRIB</p></a>
+			</div>
+		</div>
+	</div>
 </div>
 
 </body>
