--- a/index.html
+++ b/index.html
@@ -344,6 +344,31 @@
 			</div>
 		</div>
 	</div>
+	<div class="footer">
+		<div class="footer-m">
+			<div class="about">
+				<h3>ABOUTE</h3><br>
+				<p>prefer stories to statistics. It tells the story of United’s development from 
+	                                 a local works football It tells the story of United’s development from prefer stories to statistics. It tells the story of United’s development </p>
+			</div>
+			<div class="information">
+				<h3>Information</h3><br>
+				<ul>
+					<li>Information One  <a href="#">  Facebooke</a></li>
+					<li>Information Two  <a href="#">  Twiter</a></li>
+					<li>Information Three  <a href="#">  Skype</a></li>
+					<li>Information Foure  <a href="#">  Bahance</a></li>
+					<li>Information Five  <a href="#">  Facebooke</a></li>
+				</ul>
+			</div>
+			<div class="contact">
+				<h3>Contact</h3><br>
+				<p><strong>Location:</strong>Mihammadpur.Tawnhal,Dhaka</p>
+				<p><strong>Phone:</strong>0123456789</p>
+				<p><strong>Email:</strong>pressionate@gmail.com</p>
+			</div>
+		</div>
+	</div>
 </div>
 
 </body>
