--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
 				</ul>
 			</div>
 		</div>
-	</div><div class="hero">
+	</div>
+	<div class="hero">
 		<div class="hero-m">
-			<div class="hero-img">
-				<img src="img/01_HOME.jpg">
-			</div>
 			<div class="hero-text">
 				<h1>Get Up 80%</h1>
 				<p>The History By Decade section is for those supporters who 
